--- a/Ecommerce/index.html
+++ b/Ecommerce/index.html
@@ -528,7 +528,7 @@ MN5t9UJ0Z"
           </div>
         </div>
         <div class="border-top">
-          <h6 class="text-center mt-3">Copyright ©2023 All rights reserved</h6>
+          <h6 class="text-center mt-3">Priya@2023 All rights reserved</h6>
         </div>
       </footer>
     </section>
